@@ -1,3 +1,3 @@
-#stretch sid jessie trusty wily xenial#9
-#wheezy jessie#8
+#stretch sid jessie trusty xenial#9
+#jessie#8
 #precise#7
