@@ -1,1 +1,0 @@
-libqgis-customwidgets: no-symbols-control-file
