@@ -1,1 +1,2 @@
 usr/share/qgis/globe
+usr/include/osgEarthDrivers/feature_qgis
