@@ -1,1 +1,2 @@
 usr/lib/qgis/plugins/libglobeplugin.so
+usr/lib/libosgdb_osgearth_feature_qgis.so
