@@ -1,2 +1,0 @@
-qgis-plugin-grass: package-name-doesnt-match-sonames
-qgis-plugin-grass: no-symbols-control-file
