@@ -1,2 +1,1 @@
-qgis: spelling-error-in-binary usr/bin/qgis.bin YUr Your
 qgis: spelling-error-in-binary usr/lib/qgis/qgis_help YUr Your
