@@ -15,8 +15,4 @@ usr/lib/qgis/plugins/libtopolplugin.so
 usr/lib/qgis/plugins/libgeometrycheckerplugin.so
 usr/lib/qgis/plugins/libgeometrysnapperplugin.so
 usr/lib/qgis/qgis_help
-usr/share/pixmaps/
-usr/share/applications/
-usr/share/mime/packages/
-usr/share/mimelnk/
-usr/share/icons/hicolor/
+usr/share/applications
